--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Parisienne&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Metal&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
